fix spacing on mobile

--- a/_includes/header/_header.scss
+++ b/_includes/header/_header.scss
@@ -17,6 +17,7 @@
 
     @include media($phone) {
       height: auto;
+      padding: 30px 15px;
     }
   }
 
